--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.8.9)
 
 project(rts)
 
+if(NOT WIN32)
+	set(CMAKE_CXX_FLAGS "-std=c++0x")
+endif()
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/Mragpp/cmake/Modules")
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -30,6 +34,11 @@ add_executable(rts
 	src/Sprites/Buildings/HQ.cpp src/Sprites/Buildings/HQ.h
 	src/Sprites/Buildings/Port.cpp src/Sprites/Buildings/Port.h
 	src/Sprites/Buildings/Silo.cpp src/Sprites/Buildings/Silo.h
+	
+	src/Sprites/Units/Infantry.cpp src/Sprites/Units/Infantry.h
+	src/Sprites/Units/Mech.cpp src/Sprites/Units/Mech.h
+	src/Sprites/Units/Recon.cpp src/Sprites/Units/Recon.h
+	src/Sprites/Units/Tank.cpp src/Sprites/Units/Tank.h
 )
 
 add_subdirectory(src/Mragpp)
@@ -39,6 +48,6 @@ target_link_libraries(rts
 )
 
 include_directories(
-	src/Mragpp/src/
-	src/Mragpp/src/Scratch/src/
+	src/Mragpp/
+	src/Mragpp/Mragpp/Scratch/
 )
